c2rust-transpile/tests/snapshots/snapshots__transpile@records.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/records.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct AnonEnumInStruct {}
#[derive(Clone, Copy, PartialEq, Eq)]
#[repr(transparent)]
pub struct C2Rust_Unnamed(pub ::core::ffi::c_uint);
impl C2Rust_Unnamed {
    pub const VALUE1: Self = Self(0);
    pub const VALUE2: Self = Self(1);
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct AnonStructInStruct {
    pub c2rust_unnamed: C2Rust_Unnamed_0,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2Rust_Unnamed_0 {
    pub some_number: ::core::ffi::c_int,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct NestedStructInStruct {}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct InsideStruct {
    pub yup: ::core::ffi::c_int,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union AnonEnumInUnion {
    pub a: ::core::ffi::c_int,
}
#[derive(Clone, Copy, PartialEq, Eq)]
#[repr(transparent)]
pub struct C2Rust_Unnamed_1(pub ::core::ffi::c_uint);
impl C2Rust_Unnamed_1 {
    pub const VALUE3: Self = Self(0);
    pub const VALUE4: Self = Self(1);
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union AnonStructInUnion {
    pub c2rust_unnamed: C2Rust_Unnamed_2,
    pub a: ::core::ffi::c_int,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2Rust_Unnamed_2 {
    pub some_number: ::core::ffi::c_int,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union NestedStructInUnion {
    pub a: ::core::ffi::c_int,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct InsideUnion {
    pub yup: ::core::ffi::c_int,
}
#[no_mangle]
pub unsafe extern "C" fn struct_declaration() {
    let mut value: ::core::ffi::c_int = C2Rust_Unnamed::VALUE2.0 as ::core::ffi::c_int;
    let mut a: AnonEnumInStruct = AnonEnumInStruct {};
    let mut b: AnonStructInStruct = AnonStructInStruct {
        c2rust_unnamed: C2Rust_Unnamed_0 { some_number: 0 },
    };
    b.c2rust_unnamed.some_number = 7 as ::core::ffi::c_int;
    let mut c: NestedStructInStruct = NestedStructInStruct {};
    let mut d: InsideStruct = InsideStruct { yup: 0 };
}
#[no_mangle]
pub unsafe extern "C" fn union_declaration() {
    let mut value: ::core::ffi::c_int = C2Rust_Unnamed_1::VALUE4.0 as ::core::ffi::c_int;
    let mut a: AnonEnumInUnion = AnonEnumInUnion { a: 0 };
    let mut b: AnonStructInUnion = AnonStructInUnion {
        c2rust_unnamed: C2Rust_Unnamed_2 { some_number: 0 },
    };
    b.c2rust_unnamed.some_number = 99 as ::core::ffi::c_int;
    let mut c: NestedStructInUnion = NestedStructInUnion { a: 0 };
    let mut d: InsideUnion = InsideUnion { yup: 0 };
}
