c2rust-transpile/tests/snapshots/snapshots__transpile@ref_ub.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/ref_ub.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![feature(raw_ref_op)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct Foo {
    pub len: ::core::ffi::c_int,
}
#[no_mangle]
pub unsafe extern "C" fn dec(mut f: *mut Foo) {
    (*f).len -= 1;
}
unsafe fn main_0() -> ::core::ffi::c_int {
    let mut f: Foo = Foo {
        len: 5 as ::core::ffi::c_int,
    };
    let mut fp: *mut Foo = &raw mut f;
    dec(fp);
    f.len = 6 as ::core::ffi::c_int;
    dec(fp);
    return 0;
}
pub fn main() {
    unsafe { ::std::process::exit(main_0() as i32) }
}
