c2rust-transpile/tests/snapshots/snapshots__transpile@renamer.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/renamer.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct foo {}
#[no_mangle]
pub unsafe extern "C" fn local_type() {
    let mut foo_0: ::core::ffi::c_int = 0;
}
